Atualização de Questionário

--- a/questionario.ipynb
+++ b/questionario.ipynb
@@ -10,7 +10,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<pre>\n",
+    "    É uma função que armazena em memória resultados provisório para que sejam usados de forma subsequente otimizando os cálculos no spark.\n",
+    "\n",
+    "</pre>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,6 +79,51 @@
    "source": [
     "<img src =\"codigoscala.png\" /> "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<pre>\n",
+    "\n",
+    "Esse código serve para separar as palavras em string e int, fazendo o mapeamento e a redução dimensional das palavras do conjunto de dados\n",
+    "\n",
+    "Um exemplo que pode ser feito é o seguinte com as frases abaixo:\n",
+    "\n",
+    "1 - Eu gosto de chocolate\n",
+    "\n",
+    "2 - Eu gosto de jujubas.\n",
+    "\n",
+    "Fazendo o mapeamento das duas frases, teremos o seguinte resultado.\n",
+    "ID | |01  | | 02     | |03  | |04           |\n",
+    "1  | |Eu,1| |gosto,1 | |de,1| |chocolate, 1 |\n",
+    "2  | |Eu,1| |gosto,1 | |de,1| | jujuba , 1|\n",
+    "\n",
+    "Contamos todas as palavras, e agora iremos reduzir, pois há repetições de palavras.\n",
+    "ID  |    |01    | |02     | |03  |\n",
+    "1,2 |    |Eu,2  | |gosto,2| |de,2|\n",
+    "\n",
+    "ID| |04           |\n",
+    "1 | |chocolate, 1 |\n",
+    "2 | |jujuba , 1   |\n",
+    "\n",
+    "Pelo indice da frase, temos mapeados e reduzidos as palavras, evitando repetição, e mais a abaixo, as palavras que não se repetem para serem ligadas à frase principal. Isso ajuda no processamento, pois diminui a dimensão do bloco de dados a ser análisado.\n",
+    "\n",
+    "\n",
+    "\n",
+    "<b>Fontes :</b>\n",
+    "<a href =  'https://spark.apache.org/examples.html'>Apache Spark Examples</a> \n",
+    "<a href =  'http://www.univale.com.br/unisite/mundo-j/artigos/53_Mapreduce.pdf'>Funcionamento e Recursos MapReduce Detalhado</a>\n",
+    "<a href =  'https://www.ime.usp.br/~ipolato/JAI2012-Hadoop.pdf'>Apache Hadoop:conceitos teóricos e práticos,evolução e novas possibilidades.</a>\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
