Atualização de Questionário

--- a/Questionário Engenharia de Dados.ipynb
+++ b/Questionário Engenharia de Dados.ipynb
@@ -173,17 +173,10 @@
    "metadata": {},
    "source": [
     "<pre>\n",
-    "<b>Fonte:</b>\n",
+    "<b>Fonte de apoio:</b>\n",
     "<a href = 'https://github.com/darlansf1/SPark'>Repositório do Github de Darlan Santana Farias</a>\n",
     "</pre>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
